# subcortex-vis

./: .gitattributes  .gitignore  README.md  README_EN.md  demo_mesh.ipynb  environment.yml  pyproject.toml
data/: demo_roi_values.txt
scripts/: gui_app.py
subcortex_vis/: __init__.py  mesh_viz.py
subcortex_vis/gui/: __init__.py  __main__.py  constants.py  delegates.py  main_window.py  renderer.py
subcortex_vis/gui/widgets/: __init__.py  colormap_panel.py  file_loader.py  label_list.py  render_params.py
